:sparkles: update swagger for baraton
